Version 2.9 (X X, 2017) - ""
------------------------------------------------------------------------------

*** ROM SUPPORT ***
Clones:
MotorDome (German)



Version 2.8b (December 29th, 2016)
------------------------------------------------------------------------------

*** CORE/CPU ***
Optimize general sound resampling code
Expose new option "resampling_quality" to choose between fast/low quality (mode 0) and normal (mode 1)



Version 2.8 (December 24th, 2016) - "Sounds good"
------------------------------------------------------------------------------

*** CORE/CPU *** Thanks to DJRobX and lucky1 and mjr for some of these
Improve precision/performance of general sound filtering and resampling to final output sample rate (latter using libsamplerate by Erik de Castro Lopo now)
Improve sound pitch for old Sterns (Catacomb, Flight 2000, Freefall, Lightning, Orbitor 1, and Split Second)
Further improved BSMT2000 sound core for Sega, Alvin G., Data East (Batman and newer), and Stern (up to Terminator 3) DMD generation games
Further improved AT91 sound core for the rest of the Stern DMDs (Elvis, LOTR, RBION, Sopranos, Nascar/Grand Prix/Dale Jr.)
 but still one should avoid high volume levels for these machines (~24 and above, for example on Nascar, or even ~20 on LOTR)
Improved AT91 core emulation features
 and add 'at91jit' option to disable it
Improved FM sound emulation cores (like AY8910, YMF262 and YM2151: so a lot of Gottlieb generations, old Ballys, pre-DCS games, etc)
Slightly improved TMS5200 core (Bally Centaur, etc), especially the wrong pitch if Zaccaria games were run after the first time from within VP
Use reverb for all sound cores (not just TMS5200) used in Bally Centaur
Improved M114 sound core (Mr. Game)
Improved HC55516 CVSD sound core (Gorgar up to Twilight Zone, etc) and add some lowpass filtering (active only on older machines) to remove some of the audible noise