@@ -1,6 +1,9 @@
 Version 2.9 (X X, 2017) - ""
 ------------------------------------------------------------------------------
 
+*** CORE/CPU ***
+Using GTS80 gen. 2 sound on Excalibur instead of gen. 3, enabling 8910 sounds (thanks to Jim Hernandez for noticing)
+
 *** ROM SUPPORT ***
 Clones:
 MotorDome (German)
